# MRM_engine

./: CMakeLists.txt  doit.sh  main.cpp
graphics/: batchrenderer2d.cpp  batchrenderer2d.h  renderable2d.cpp  renderable2d.h  renderer2d.cpp  renderer2d.h  shader.cpp  shader.h  simplerenderer2d.cpp  simplerenderer2d.h  sprite.cpp  sprite.h  static_sprite.cpp  static_sprite.h  window.cpp  window.h
graphics/buffers/: buffer.cpp  buffer.h  indexbuffer.cpp  indexbuffer.h  vertexarray.cpp  vertexarray.h
maths/: mat4.cpp  mat4.h  maths.h  maths_func.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
shaders/: basic.frag  basic.vert
utils/: fileutils.cpp  fileutils.h
